--- a/Notes/47. Now you know objects in javascript.md
+++ b/Notes/47. Now you know objects in javascript.md
@@ -1,1 +1,248 @@
-Now you know objects in javascript
+# 🧠 Advanced Concepts of Objects in JavaScript
+
+---
+
+## 🔥 Context & Background
+
+- The speaker shares an **interview experience** where a clever JavaScript question was asked:  
+  **“Can you change the value of `Math.PI` to something else?”**  
+  This question tests **deep understanding of JavaScript internals**, particularly object property descriptors.
+
+---
+
+## 🧪 Can You Change `Math.PI`?
+
+- **Common Answer**: "No, it's a constant."
+- ✅ **Real Answer**: You **cannot** change it because its `writable`, `enumerable`, and `configurable` property flags are set to `false`.
+- This is not just a constant—it’s a **non-writable, non-configurable property** of the `Math` object.
+
+```js
+console.log(Object.getOwnPropertyDescriptor(Math, 'PI'));
+```
+
+🔍 Output:
+```js
+{
+  value: 3.141592653589793,
+  writable: false,
+  enumerable: false,
+  configurable: false
+}
+```
+
+---
+
+## 🧰 Deep Dive: Object Properties & Descriptors
+
+### ▶️ Create a Simple Object:
+```js
+const chai = {
+  name: "Ginger Tea",
+  price: 250,
+  available: true
+};
+```
+
+### ▶️ Inspect Property Descriptors:
+```js
+console.log(Object.getOwnPropertyDescriptor(chai, 'name'));
+```
+
+Returns:
+```js
+{
+  value: 'Ginger Tea',
+  writable: true,
+  enumerable: true,
+  configurable: true
+}
+```
+
+---
+
+## 🧪 Modify Property Descriptors
+
+### Make a property non-enumerable:
+
+```js
+Object.defineProperty(chai, 'name', {
+  enumerable: false
+});
+```
+
+✅ Now, `name` won't appear in loops like `for...in` or `Object.keys()`.
+
+---
+
+## 🌀 Real-World Use Case
+
+In certain APIs or backend services, object properties might seem inaccessible in loops or console logs. This could be due to:
+- `enumerable: false`
+- `configurable: false`
+- `writable: false`
+
+🛠️ Use:
+```js
+Object.getOwnPropertyDescriptor(obj, prop)
+```
+...to understand why!
+
+---
+
+## 🛡️ Define Immutable Custom Properties
+
+To create a read-only and locked value in your object:
+```js
+Object.defineProperty(obj, 'key', {
+  value: 'someValue',
+  writable: false,
+  enumerable: false,
+  configurable: false
+});
+```
+
+---
+
+## ♻️ Object Creation Techniques
+
+- Object Literal:  
+  ```js
+  const obj = {};
+  ```
+
+- `Object.create`:  
+  ```js
+  const newObj = Object.create(null);
+  ```
+
+- Constructor functions, factory functions, or ES6 classes.
+
+---
+
+## 🔄 Iterating Objects with Custom Properties
+
+If `enumerable: false`, the property won’t show in:
+```js
+for (let key in obj)
+Object.keys(obj)
+```
+
+🔁 Use:
+```js
+Object.entries(obj)
+```
+
+To safely extract `[key, value]` pairs — while optionally filtering out functions or hidden props.
+
+---
+
+## 💡 Final Thoughts
+
+- `Math.PI` teaches how **JavaScript's object model** protects core functionality.
+- Understanding **property descriptors** gives you power to build **secure, unmodifiable APIs or configurations**.
+- You’ll encounter this often in **frameworks, real APIs, and backend responses**.
+
+---
+
+## 📚 Interview Tip
+
+If asked: *"Can we change Math.PI?"*
+- Say: “No, because its `writable`, `enumerable`, and `configurable` descriptors are set to false — confirmed using `Object.getOwnPropertyDescriptor`.”
+
+---
+
+
+Got it! You want to know if **objects are iterable in JavaScript** and how that works.
+
+### Are Objects Iterable in JavaScript?
+
+* **By default, plain JavaScript objects (`{}`) are NOT iterable.**
+* Iterables are objects like Arrays, Strings, Maps, Sets, etc., which implement the iterable protocol via a `[Symbol.iterator]` method.
+* Plain objects do **not** have this `[Symbol.iterator]` method, so you **cannot use `for...of` directly on them.**
+
+---
+
+### What does iterable mean?
+
+An object is **iterable** if it implements the `[Symbol.iterator]` method, which returns an iterator.
+
+Example of iterable objects:
+
+* Arrays
+* Strings
+* Maps
+* Sets
+* Typed arrays
+
+---
+
+### How to iterate over objects?
+
+Though plain objects aren’t iterable by `for...of`, you can iterate over their keys, values, or entries using these methods:
+
+```js
+const obj = { a: 1, b: 2, c: 3 };
+
+// Iterate keys
+for (const key of Object.keys(obj)) {
+  console.log(key);
+}
+
+// Iterate values
+for (const value of Object.values(obj)) {
+  console.log(value);
+}
+
+// Iterate entries [key, value]
+for (const [key, value] of Object.entries(obj)) {
+  console.log(key, value);
+}
+```
+
+These methods return **arrays**, which are iterable, so you can use `for...of` on them.
+
+---
+
+### Can we make a plain object iterable?
+
+Yes! You can add the `[Symbol.iterator]` method yourself:
+
+```js
+const obj = {
+  a: 1,
+  b: 2,
+  c: 3,
+  [Symbol.iterator]: function* () {
+    for (const key of Object.keys(this)) {
+      yield [key, this[key]];
+    }
+  }
+};
+
+for (const [key, value] of obj) {
+  console.log(key, value);
+}
+// Output:
+// a 1
+// b 2
+// c 3
+```
+
+Here, the object becomes iterable by implementing a generator function at `[Symbol.iterator]`.
+
+---
+
+### Summary
+
+| Object Type                     | Iterable? | Use `for...of` directly? |
+| ------------------------------- | --------- | ------------------------ |
+| Array                           | Yes       | Yes                      |
+| String                          | Yes       | Yes                      |
+| Map                             | Yes       | Yes                      |
+| Set                             | Yes       | Yes                      |
+| Plain Object `{}`               | No        | No                       |
+| Object with `[Symbol.iterator]` | Yes       | Yes                      |
+
+---
+
+
