addedd some interview questions

--- a/Interview Questions/1. Interview Questions.md
+++ b/Interview Questions/1. Interview Questions.md
@@ -93,11 +93,19 @@ function example() {
 ---
 
 
+### 4. What is hoisting in JavaScript?
+- 
 
 
 
-4. **What is hoisting in JavaScript?**
-5. **Explain the difference between `==` and `===`.**
+
+### 5. Explain the difference between `==` and `===`.
+- 
+- 
+
+
+
+
 6. **What are truthy and falsy values in JavaScript?**
 7. **What is the DOM, and how does JavaScript interact with it?**
 8. **What is an event in JavaScript?**
@@ -105,8 +113,65 @@ function example() {
 10. **What is a function? What are function expressions and declarations?**
 
 ## 🧠 Intermediate-Level JavaScript Interview Questions
-1. **What is a closure in JavaScript?**
-2. **Explain scope and types of scope in JavaScript.**
+### 1. What is a closure in JavaScript?
+- 
+- 
+### 2. Explain scope and types of scope in JavaScript.
+### What is Scope?
+- **Scope** in JavaScript refers to the accessibility or visibility of variables in different parts of your code.
+- It determines where variables can be declared, accessed, and modified.
+
+### Types of Scope in JavaScript
+1. **Global Scope**
+- Variables declared outside any function/block.
+- Accessible anywhere in the code.
+- Example:
+```javascript
+let globalVar = "I am global";
+
+function show() {
+  console.log(globalVar); // ✅ Accessible
+}
+```
+2. **Function Scope (Local Scope)**
+- Variables declared inside a function using var, let, or const.
+- Accessible only within that function.
+- Example:
+```javascript
+function greet() {
+  let name = "Alice";
+  console.log(name); // ✅ Accessible here
+}
+console.log(name); // ❌ ReferenceError
+```
+3. **Block Scope**
+- Introduced in ES6 with let and const.
+- Variables are only accessible within the block {} where they are defined.
+- Example:
+```javascript
+if (true) {
+  let x = 10;
+  const y = 20;
+}
+console.log(x); // ❌ Error
+```
+4. **Lexical (Static) Scope**
+- Functions in JavaScript are lexically scoped, meaning:
+- A function’s scope is determined by where it’s defined, not where it’s called.
+- Example:
+```javascript
+function outer() {
+  let a = "outer";
+
+  function inner() {
+    console.log(a); // ✅ Has access to parent scope
+  }
+
+  inner();
+}
+```
+
+- 
 3. **What is the event loop?**
 4. **What is the difference between `null` and `undefined`?**
 5. **Explain callback functions.**
@@ -127,3 +192,36 @@ function example() {
 8. **What are higher-order functions?**
 9. **How does JavaScript handle memory management?**
 10. **What is debouncing and throttling?**
+- **Debouncing** and **throttling** are techniques in JavaScript used to control how often a function is executed, especially in response to high-frequency events like scroll, resize, or keypress.
+
+### Debouncing
+- Debouncing ensures a function is executed only after a specified delay once the event stops firing.
+- **Use Case**: Search input, resize window
+- **Example**: Delay API call until user stops typing
+```javascript
+function debounce(fn, delay) {
+  let timer;
+  return (...args) => {
+    clearTimeout(timer);
+    timer = setTimeout(() => fn.apply(this, args), delay);
+  };
+}
+```
+
+### Throttling
+- **Throttling** ensures a function is executed at most once every X milliseconds, no matter how many times the event fires.
+- **Use Case**: Scroll tracking, analytics events
+- **Example**: Log position while scrolling every 500ms
+
+```javascript
+function throttle(fn, limit) {
+  let lastCall = 0;
+  return (...args) => {
+    const now = Date.now();
+    if (now - lastCall >= limit) {
+      lastCall = now;
+      fn.apply(this, args);
+    }
+  };
+}
+```
