added interview questions

--- a/Interview Questions/1. Interview Questions.md
+++ b/Interview Questions/1. Interview Questions.md
@@ -99,14 +99,89 @@ function example() {
 
 
 
-### 5. Explain the difference between `==` and `===`.
-- 
-- 
+### 5. Explain the difference between `==` and `===` in JavaScript
+- In JavaScript, `==` and `===` are comparison operators used to compare two values, but they behave differently:
+
+| Operator | Name                | Behavior                                 | Type Coercion           | Example                         | Result         |
+|----------|---------------------|------------------------------------------|------------------------|--------------------------------|----------------|
+| `==`     | Loose equality      | Compares values for equality after **type coercion** (converts types if needed) | Yes                    | `'5' == 5`                     | `true`         |
+| `===`    | Strict equality     | Compares values for equality **without type coercion** (both value and type must be the same) | No                     | `'5' === 5`                    | `false`        |
+
+#### Detailed Explanation:
+
+- **`==` (Loose Equality):**  
+  - Converts the operands to the same type before comparison.  
+  - Performs type coercion, which can lead to unexpected results.  
+  - Useful when you want to check value equality regardless of type, but can be error-prone.
+
+- **`===` (Strict Equality):**  
+  - Checks both value and type without any conversion.  
+  - More predictable and recommended for most cases.  
+  - Avoids bugs due to implicit type conversions.
+
+#### Examples:
+
+```js
+5 == '5';      // true (string '5' is converted to number 5)
+5 === '5';     // false (number vs string)
+0 == false;    // true (false is converted to 0)
+0 === false;   // false (number vs boolean)
+null == undefined;  // true (special case)
+null === undefined; // false
+
+---
 
 
 
 
-6. **What are truthy and falsy values in JavaScript?**
+### 6. What are truthy and falsy values in JavaScript?
+**Definition:**
+- In JavaScript, every value is either **truthy** or **falsy** when evaluated in a Boolean context (like in `if` statements, logical operations, etc.).
+- **Truthy values** evaluate to `true`.
+- **Falsy values** evaluate to `false`.
+
+
+### Falsy Values in JavaScript
+
+There are exactly **7 falsy values** in JavaScript:
+
+1. `false`  
+2. `0` (number zero)  
+3. `-0` (negative zero)  
+4. `""` (empty string)  
+5. `null`  
+6. `undefined`  
+7. `NaN` (Not a Number)  
+
+These values behave like `false` in conditional checks.
+
+
+### Truthy Values in JavaScript
+
+- All values that are **not falsy** are considered **truthy**.
+- This includes non-empty strings, numbers other than zero, objects, arrays, functions, etc.
+- For example: `"0"`, `"false"`, `{}`, `[]`, `42`, `true` are all truthy.
+
+
+### Why does it matter?
+
+- JavaScript automatically converts values to Boolean in contexts like conditions, loops, logical operators.
+- Understanding truthy and falsy values helps prevent bugs and write cleaner code.
+
+
+### Example:
+
+```javascript
+if ("hello") {
+  console.log("This is truthy"); // This will run
+}
+
+if (0) {
+  console.log("This won't run"); // Because 0 is falsy
+}
+```
+---
+
 7. **What is the DOM, and how does JavaScript interact with it?**
 8. **What is an event in JavaScript?**
 9. **What is the use of `addEventListener()`?**
