added some more questions

--- a/Interview Questions/1. Interview Questions.md
+++ b/Interview Questions/1. Interview Questions.md
@@ -246,9 +246,15 @@ function outer() {
 }
 ```
 
-- 
+---
+
 3. **What is the event loop?**
-4. **What is the difference between `null` and `undefined`?**
+### 4. What is the difference between `null` and `undefined`?
+- **undefined** means a variable has been declared but has not been assigned a value yet. It is also the default return value of functions that do not explicitly return anything.
+- **null** is an assignment value that represents “no value” or “empty” intentionally. It must be explicitly assigned to a variable to indicate the absence of any object value.
+
+---
+
 5. **Explain callback functions.**
 6. **What is the difference between synchronous and asynchronous JavaScript?**
 7. **What are promises in JavaScript?**
@@ -260,13 +266,37 @@ function outer() {
 1. **What is prototypal inheritance?**
 2. **Explain the concept of closures with an example.**
 3. **What is the difference between `call()`, `apply()`, and `bind()`?**
-4. **What is currying in JavaScript?**
+
+### 4. What is currying in JavaScript?
+- Currying is a functional programming technique in JavaScript where a function with multiple arguments is transformed into a sequence of nested functions, each taking one argument at a time. Instead of calling the function with all arguments simultaneously, you call it one argument at a time, with each call returning a new function that takes the next argument.
+- This allows partial application of functions — fixing some arguments early and producing new specialized functions. Currying improves code reusability, modularity, and function composition.
+- Example:
+```javascript
+// Normal function
+function multiply(a, b) {
+  return a * b;
+}
+
+// Curried version
+function curriedMultiply(a) {
+  return function(b) {
+    return a * b;
+  };
+}
+
+const multiplyBy5 = curriedMultiply(5);
+console.log(multiplyBy5(10));  // Output: 50
+```
 5. **How does JavaScript handle asynchronous operations internally?**
 6. **What are async/await? How do they improve code readability?**
 7. **Explain the module system in JavaScript (`import/export`).**
 8. **What are higher-order functions?**
 9. **How does JavaScript handle memory management?**
-10. **What is debouncing and throttling?**
+
+--
+
+### 10. What is debouncing and throttling?
+
 - **Debouncing** and **throttling** are techniques in JavaScript used to control how often a function is executed, especially in response to high-frequency events like scroll, resize, or keypress.
 
 ### Debouncing
@@ -300,3 +330,4 @@ function throttle(fn, limit) {
   };
 }
 ```
+---
