--- a/Notes/49. Lexical Scoping and Closure..md
+++ b/Notes/49. Lexical Scoping and Closure..md
@@ -1,1 +1,226 @@
-Getter Setter and Stack Overflow
+Lexical Scoping and Closure
+
+MDN Docs:
+[Closures](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Closures)
+
+--- 
+
+
+# 🧠 Lexical Scoping and Closures in JavaScript
+
+---
+
+### 📌 1. Introduction
+
+* The video covers two critical and often misunderstood JavaScript concepts:
+
+  * **Lexical Scoping**
+  * **Closures**
+* These are **fundamental for understanding advanced JavaScript behavior**, especially in real-world scenarios like React apps and event handling.
+
+---
+
+### 🔍 2. What is Lexical Scoping?
+
+**Definition:**
+
+> Lexical scope refers to the **scope determined at the time of writing the code**, based on the position of functions and variables in the source code.
+
+* **A function has access to variables defined in its own scope and the scope of its parent function.**
+* **Nested functions** can access variables from their outer functions.
+
+#### ✅ Example:
+
+```javascript
+function outer() {
+  let userName = "Hitesh";
+
+  function inner() {
+    console.log(userName); // ✅ Accessible
+  }
+
+  inner();
+}
+
+outer();
+```
+
+* `inner()` function has **access to `userName`** due to lexical scoping.
+
+#### ❌ Counterexample:
+
+```javascript
+function outer() {
+  let userName = "Hitesh";
+}
+
+console.log(userName); // ❌ ReferenceError: userName is not defined
+```
+
+* Outside `outer()`, the variable is **not accessible**.
+
+---
+
+### 💡 3. Analogy to Understand Lexical Scope
+
+* Think of it like a **family**:
+
+  * Children can access things from their parents (scope).
+  * Parents cannot access the secrets or private variables of their children.
+  * Siblings do **not share variables** between each other.
+
+---
+
+### 🧪 4. Lexical Scope in Practice
+
+* Variables declared in **outer functions** are **available to inner functions**, but the reverse is not true.
+
+#### Multi-level Example:
+
+```javascript
+function outer() {
+  let secret = "123";
+
+  function inner() {
+    console.log(secret); // ✅ Accessible
+  }
+
+  function inner2() {
+    console.log(secret); // ✅ Accessible
+  }
+
+  inner();
+  inner2();
+}
+
+outer();
+```
+
+* Both `inner()` and `inner2()` can access `secret`.
+
+However:
+
+```javascript
+function outer() {
+  function inner() {
+    let secret = "123";
+  }
+
+  function inner2() {
+    console.log(secret); // ❌ Error
+  }
+
+  inner();
+  inner2();
+}
+```
+
+* `inner2()` cannot access `secret` because it's **declared inside `inner()`** and **not in the outer scope**.
+
+---
+
+### 🧩 5. What is a Closure?
+
+**Definition (MDN Inspired):**
+
+> A **closure** is the combination of a function bundled together with references to its surrounding (lexical) scope.
+
+This means:
+
+* A function can "remember" the scope in which it was created.
+* **Even after the outer function has finished execution**, the inner function **still retains access to the variables** of the outer function.
+
+---
+
+### 🔁 6. Closure in Action
+
+#### Example:
+
+```javascript
+function makeFan() {
+  let name = "Mozilla";
+
+  function displayName() {
+    console.log(name); // ✅ Will print "Mozilla"
+  }
+
+  return displayName;
+}
+
+const myFunc = makeFan();
+myFunc(); // Prints: Mozilla
+```
+
+* Even though `makeFan()` has finished execution, `displayName()` still has access to `name`.
+
+✅ This is **closure in action**.
+🧠 The inner function **remembers its lexical environment**.
+
+---
+
+### 🎯 7. Why Closures Are Important
+
+* **Used in real-world development** like:
+
+  * Event handlers
+  * React hooks
+  * Currying
+  * Data privacy
+
+---
+
+### 🛠️ 8. Real World Example Using Closures
+
+#### Use Case: Setting background color on button click
+
+Instead of repeating code for multiple buttons:
+
+```javascript
+function clickHandler(color) {
+  return function () {
+    document.body.style.backgroundColor = color;
+  }
+}
+
+document.getElementById("orange").onclick = clickHandler("orange");
+document.getElementById("green").onclick = clickHandler("green");
+```
+
+* Each click calls the handler created by `clickHandler()`.
+* Even though the outer function `clickHandler()` has returned, the inner anonymous function still **remembers the `color` variable**.
+* This is a closure in practice.
+
+---
+
+### ⚠️ Common Interview Questions
+
+1. **What is Lexical Scope?**
+
+   * Scope defined by the structure of your code (nested functions can access parent variables).
+
+2. **What is a Closure?**
+
+   * A function that remembers variables from its lexical scope even after the outer function has returned.
+
+3. **What gets returned in a closure?**
+
+   * Not just the function, but also the entire **lexical environment** required by that function.
+
+4. **Can sibling functions access each other’s variables?**
+
+   * No. Only inner functions can access their parent’s scope.
+
+5. **Why do closures matter in event handling?**
+
+   * Because they let event handlers remember context-specific values like button color, user data, etc.
+
+---
+
+### 📚 Summary Table
+
+| Concept   | Lexical Scope                     | Closure                             |
+| --------- | --------------------------------- | ----------------------------------- |
+| Meaning   | Scope based on code position      | Function + its outer scope          |
+| Use Case  | Variable accessibility            | Retain access after outer execution |
+| Access    | Inner functions access outer vars | Even after parent is done           |
+| Common In | All JS functions                  | Callbacks, handlers, React          |
